--- a/app/webroot/assets/sass/screen.scss
+++ b/app/webroot/assets/sass/screen.scss
@@ -1,7 +1,6 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+/*!
+ * Esher C of E High School Staff Intranet Stylesheet
+ */
 
 @import "compass/reset";
 @import "compass/css3";
@@ -117,6 +116,7 @@ body {
 
 footer {
 	@include center;
+	background-color: #003A70;
 	font-size: 0.8em;
 	line-height: 1em;
 	width: 100%; 
@@ -139,8 +139,10 @@ footer {
 		}
 		text-shadow: 0 0 4px #000;
 	}
-	background-color: #003A70;
-	.footer-nav {
+	.lower {
+		margin-top: 30px;
+	}
+	ul.footer-nav {
 		list-style-type: none;
 		padding: 0;
 		margin: 0;
@@ -198,7 +200,7 @@ footer {
 .main-container {
 	@include box-shadow(0 0 2px 1px #888); 
 	@include left;
-	width: ($container-width + ($container-padding *2));
+	width: ($container-width);
 	margin: 0;
 	margin-left: auto;
 	margin-right: auto;
@@ -232,7 +234,6 @@ footer {
 /* Header Navigation */
 .header {
 	background-color: #fff;
-	background-image: url('../images/header-bg.png');
 	background-repeat: repeat-x;
 	height: 72px;
 	width: 100%;
@@ -303,7 +304,11 @@ footer {
 
 /* Sidebar Navigation */
 .side-nav {
-	margin-top: 20px;
+	border-left: 1px solid #dfdfdf; 
+	background-color: #003A70;
+	color: #fff;
+	padding-top: 8px;
+	padding-bottom: 8px;
 	p {
 		margin-left: 6px;
 	}
@@ -314,6 +319,32 @@ footer {
 	ul {
 		font-size: 13px;
 		line-height: 1em;
+		list-style-type: none;
+		li {
+			font-size: 14px;
+			font-weight: 400;
+			a, a:link, a:visited, a:active, a:hover {
+				font-weight: 400;
+				font-size: 14px;
+				text-decoration: none;
+				color: #fff;
+			}
+			a:hover {
+				background-color: #0059ac;
+			}
+		}
+		li.divider {
+			border: 0;
+			border-top: 0;
+			border-bottom: 1px solid #0059ac;
+		}
+		li.nav-header {
+			font-size: 1.1em;
+			line-height: 1em;
+			font-weight: 300;
+			text-align: center;
+			color: #fff;
+		}
 	}
 	/*
 	ul {
