--- a/app/webroot/assets/sass/screen.scss
+++ b/app/webroot/assets/sass/screen.scss
@@ -2,698 +2,24 @@
  * Esher C of E High School Staff Intranet Stylesheet
  */
 
+
+// Necessary Imports
 @import "compass/reset";
 @import "compass/css3";
 @import "sassy-buttons";
-@import 'bootstrap.scss';
-@import 'font-awesome.scss';
+@import '../imports/resources/bootstrap.scss';
+@import '../imports/resources/font-awesome.scss';
 @import url('https://fonts.googleapis.com/css?family=Handlee|Open+Sans:300,400,700|Roboto+Slab');
 
-/* Variables */
-$primary-font: 'Open Sans';
-$container-width: 940px;
-$container-padding: 20px;
-$grey: #8a8a8a;
-$border-color: $grey;
-$inner-border: #d6d6d6;
+// Mixins and Variables
+@import '../imports/resources/mixins.scss';
+@import '../imports/resources/settings.scss';
 
-/* Mixins */
-@mixin left {
-	text-align: left;
-}
+// Primary Styles
+@import '../imports/resources/typography.scss';
+@import '../imports/resources/primary.scss';
+@import '../imports/resources/navigation.scss';
+@import '../imports/resources/components.scss';
 
-.left {
-	text-align: left; 
-}
-
-@mixin center {
-	text-align: center;
-}
-
-.center {
-	text-align: center;
-}
-
-@mixin right {
-	text-align: right;
-}
-
-.right {
-	text-align: right;
-}
-
-@mixin shadow($x, $y, $b, $s, $c) {
-	$shadow-properties: $x $y $b $s $c;
-	-moz-box-shadow: $shadow-properties;
-	-webkit-box-shadow: $shadow-properties;
-	box-shadow: $shadow-properties;
-}
-
-/* Typography */
-body, p {
-	font-size: 14px;
-	line-height: 20px;
-	font-family: $primary-font, sans-serif;
-}
-h1, h2 {
-	padding: 0;
-	margin: 0;
-}
-h1 {
-	margin-bottom: 10px;
-}
-h2 {
-	margin-bottom: 20px;
-}
-h3 {
-	margin: 0;
-	padding: 0;
-	margin-top: 0.2em;
-	margin-bottom: 0.2em;
-	font-size: 2.25em;
-	font-weight: 400;
-	border-bottom: 1px #dfdfdf solid;
-	margin-bottom: 12px;
-	line-height: 1em;
-	small {
-		
-	}
-}
-
-h4 {
-	font-size: 1.6em;
-	line-height: 1em;
-	font-weight: 400;
-}
-
-a:hover {
-	text-decoration: none;
-}
-
-a {
-	.black {
-		color: #000;
-	}
-}
-
-a, a:hover, a:visited, a:link, a:active {
-	i {
-		color: #000;
-		font-decoration: none;
-		font-size: 14px;
-	}
-}
-
-/* Tables */
-table {
-	font-size: 0.9em;
-	line-height: 0.9em;
-}
-/* Primary Elements */
-body {
-	background-color: #fdfdfd;
-	margin-top: 40px;
-}
-
-footer {
-	@include center;
-	background-color: #003A70;
-	font-size: 0.8em;
-	line-height: 1em;
-	width: 100%; 
-	min-height: 200px;
-	margin: 0;
-	margin-top: 32px;
-	padding-top: 16px;
-	padding-bottom: 16px;
-	font-weight: 400;
-	color: #fff;
-	p {
-		color: #fff;
-		font-weight: 400;
-		a, a:link, a:visited, a:active, a:hover {
-			color: #fff;
-			text-decoration: none;
-		}
-		a:hover {
-			color: #C5D60B;
-		}
-		text-shadow: 0 0 4px #000;
-	}
-	.lower {
-		margin-top: 30px;
-	}
-	ul.footer-nav {
-		list-style-type: none;
-		padding: 0;
-		margin: 0;
-		li {
-			display: inline;
-			font-size: 14px;
-			font-weight: 400;
-			margin-left: 12px;
-			a, a:link, a:visited, a:active, a:hover {
-				font-weight: 400;
-				font-size: 14px;
-				color: #fff;
-				text-shadow: 0 0 4px #000;
-				text-decoration: none;
-			}
-			a:hover {
-				color: #C5D60B;
-			}
-		}
-	}
-	h1 {
-		text-shadow: 0 0 4px #000;
-		margin: 0;
-		margin-top: 16px;
-		padding: 0;
-		font-size: 32px;
-		line-height: 1em;
-		font-weight: 400;
-		margin-bottom: 8px;
-		a, a:link, a:active, a:visited, a:hover {
-			color: #fff;
-			text-decoration: none;
-		}
-	}
-	h2 {
-		text-shadow: 0 0 4px #000;
-		margin: 0;
-		padding: 0;
-		margin-bottom: 16px;
-		position: relative;
-		right: 20px;
-		line-height: 1em;
-		font-family: $primary-font, serif;
-		font-weight: 400;
-		font-size: 24px;
-		color: #ddd;
-		a, a:link, a:active, a:visited, a:hover {
-			color: #fff;
-			text-decoration: none;
-		}
-	}
-}
-
-/* Primary Classes */
-.main-container {
-	@include box-shadow(0 0 2px 1px #888); 
-	@include left;
-	width: ($container-width + ($container-padding * 2));
-	margin: 0;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 16px;
-	padding: 0;
-	border: 0px solid $border-color;
-	background: #fff;
-	z-index: 1;
-}
-
-/*
-.container {
-	max-width: $container-width;
-	width: $container-width;
-	padding: $container-padding;
-	padding-bottom: 0;
-	margin-left: auto;
-	margin-right: auto;
-}
-*/
-/*
-.container.condensed {
-	max-width: $container-width;
-	width: $container-w#idth;
-	padding: 0; 
-	margin: 0;
-	margin-left: auto;
-	margin-right: auto;
-}
-*/
-/* Header Navigation */
-.header {
-	background-color: #fff;
-	background-repeat: repeat-x;
-	height: 72px;
-	width: 100%;
-	padding-top: 8px;
-	.container {
-		margin-top: 0;
-		margin-bottom: 0;
-		padding: 0;
-	}
-	a {
-		h1 {
-			color: #333;
-		}
-		h2 {
-			color: #6e6e6e;
-		}
-	}
-	h1 {
-		margin: 0;
-		padding: 0;
-		font-size: 32px;
-		line-height: 1em;
-		font-weight: 400;
-	}
-	h2 {
-		margin: 0;
-		padding: 0;
-		position: relative;
-		left: 20px;
-		line-height: 1em;
-		font-family: $primary-font, serif;
-		font-weight: 400;
-		font-size: 24px;
-		color: #6e6e6e;
-	}
-}
-.navigation {
-	@include center;
-	width: 980px;
-	height: auto;
-	padding: 0px;
-	margin: 0;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 8px;
-	background-color: #0059ac;
-	z-index: 10000;
-}
-
-.navigation-bg {
-	z-index: -500;
-	width: 100%;
-	height: 68px;
-	padding: 0;
-	margin: 0;
-	position: absolute;
-	z-index: -1000;
-	background-color: #00478a;
-	top: 120px;
-}
-
-.nav-smt {
-	background-color: #333;
-	a.btn {
-		color: #fff;
-	}
-}
-
-/* Sidebar Navigation */
-.side-nav {
-	padding-top: 8px;
-	padding-bottom: 8px;
-	p {
-		margin-left: 6px;
-	}
-	hr {
-		margin-top: 3px;
-		margin-bottom: 3px;
-	}
-
-	/*
-	ul {
-		font-size: 8pt;
-		list-style-type: none;
-		padding: 0;
-		margin: 0;
-		margin-left: 6px;
-		margin-top: 6px;
-		li {
-			background-image: url('../images/sidenav-bullet.gif');
-			background-position: left top;
-			background-repeat: no-repeat;
-			padding-bottom: 6px;
-			padding-left: 24px;
-		}
-	}
-	*/
-	.nav-header {
-		color: #000;
-	}
-	.title {
-		height: 20px;
-		background-image: url('../images/heading-bg.gif');
-		color: #fff;
-		padding: 5px;
-		margin: 0;
-		padding-left: 6px;
-		padding-right: 6px;
-		h5 { 
-			font-size: 10pt;
-			padding: 0;
-			margin: 0;
-			font-weight: 700;
-		}
-	}
-	.content {
-		padding: 0px;
-	}
-	.well {
-		@include border-radius(0px);
-		padding: 8px 0;
-	}
-}
-
-/* More Navigation */
-.navbar-inner {
-	height: 20px;
-}
-ul.dropdown-menu {
-	@include border-radius(0px);
-	li {
-		a:hover {
-			background-color: #0059ac;
-		}
-	}
-}
-
-/* Content */
-.article {
-	border: 1px solid $inner-border;
-	padding: 0;
-	margin: 0;
-	margin-bottom: 20px;
-	.title {
-		height: 20px;
-		background-image: url('../images/heading-bg.gif');
-		color: #fff;
-		padding: 0;
-		margin: 0;
-		padding: 5px;
-		padding-left: 6px;
-		padding-right: 6px;
-		h5 {
-			font-size: 10pt;
-			padding: 0;
-			margin: 0;
-			font-weight: 700;
-		}
-	}
-	.content {
-		padding: 10px;
-	}
-}
-
-/* Carousel */
-#sbCarousel {
-	border: 0;
-	
-}
-
-table.sbCarousel-table {
-	width: 100%;
-	tr {
-		td {
-			vertical-align: top;
-		}
-	}
-}
-
-.carousel-control {
-  position: absolute;
-  top: 100%;
-  left: 15px;
-  width: 40px;
-  height: 40px;
-  margin-top: -20px;
-  font-size: 60px;
-  font-weight: 100;
-  line-height: 30px;
-  color: #ffffff;
-  text-align: center;
-  background: #222222;
-  border: 3px solid #ffffff;
-  -webkit-border-radius: 23px;
-     -moz-border-radius: 23px;
-          border-radius: 23px;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-}
-
-/* Staff Bulletin */
-.item.active {
-
-}
-.note {
-	background-image: url('../images/note.jpg');
-	height: 275px;
-	margin: 0;
-	padding: 0;
-	width: 275px;
-}
-
-.note-inner {
-	@include center;
-	font-family: 'Handlee', sans-serif;
-	position: relative;
-	top: 50px;
-	left: 20px;
-	width: 230px;
-	-vebkit-transform: rotate(-3deg);
-	-moz-transform: rotate(-3deg);
-	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=-3);
-}
-
-.bulletin-text {
-	@include center;
-	position: relative;
-	top: 75px;
-	left: -30px;
-}
-
-.note-inner p {
-	font-size: 180%;
-	font-weight: 700;
-	line-height: 2;
-}
-
-/* Buttons */
-.button {
-	@include sassy-button("simple", 6px, 1em, #fff, #dedede, #000, "inset");
-}
-
-a:hover.button {
-	color: #000;
-}
-
-.button.button-primary {
-	@include sassy-button("simple", 6px, 1em, #006dcc, #004baa, #fff, "inset");
-}
-
-a:hover.button-primary {
-	color: #fff;
-}
-
-.button.button-large {
-	font-size: 1.25em;
-}
-
-.button-nav {
-	@include sassy-button("flat", 0px, 1em, #0059ac, #0059ac, #fff, "inset");
-	height: auto;
-	filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0059AC', endColorstr='#FF0059ac');
-}
-.button-secondary-nav {
-	@include sassy-button("flat", 0px, 1em, #333, #333, #fff, "inset");
-	height: auto;
-	filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF333333', endColorstr='#FF333333');
-}
-a.button-nav, a:hover.button-nav, a.button-secondary-nav, a:hover.button-secondary-nav {
-	font-weight: 700;
-	color: #fff;
-}
-
-.btn {
-	@include border-radius(0px);
-}
-
-/* Form Elements */
-input, input[type="text"], textarea, select {
-	@include border-radius(0px);
-}
-input[type="text"] {
-	font-size: 1.5em;
-	height: auto;
-}
-input[type="text"].input-block-level {
-	font-size: 1.5em;
-	height: auto;
-}
-/* Pagination */
-a.pagination-text {
-	color: #000;
-}
-.pagination {
-  margin: 20px 0;
-}
-
-.pagination ul {
-  display: inline-block;
-  *display: inline;
-  margin-bottom: 0;
-  margin-left: 0;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  *zoom: 1;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-}
-
-.pagination ul > li {
-  display: inline;
-}
-
-.pagination ul > li > a,
-.pagination ul > .active,
-.pagination ul > li > span {
-  float: left;
-  padding: 4px 12px;
-  line-height: 20px;
-  text-decoration: none;
-  background-color: #ffffff;
-  border: 1px solid #dddddd;
-  border-left-width: 0;
-}
-
-.pagination ul > li > a:hover,
-.pagination ul > .active,
-.pagination ul > .active > a,
-.pagination ul > .active > span {
-  background-color: #f5f5f5;
-}
-
-.pagination ul > .active > a,
-.pagination ul > .active,
-.pagination ul > .active > span {
-  color: #999999;
-  cursor: default;
-}
-
-.pagination ul > .disabled > span,
-.pagination ul > .disabled > a,
-.pagination ul > .disabled > a:hover {
-  color: #999999;
-  cursor: default;
-  background-color: transparent;
-}
-
-.pagination ul > li:first-child > a,
-.pagination ul > li:first-child > .active,
-.pagination ul > li:first-child > span {
-  border-left-width: 1px;
-  -webkit-border-bottom-left-radius: 4px;
-          border-bottom-left-radius: 4px;
-  -webkit-border-top-left-radius: 4px;
-          border-top-left-radius: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  -moz-border-radius-topleft: 4px;
-}
-
-.pagination ul > li:last-child > a,
-.pagination ul > li:last-child > .active,
-.pagination ul > li:last-child > span {
-  -webkit-border-top-right-radius: 4px;
-          border-top-right-radius: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-          border-bottom-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -moz-border-radius-bottomright: 4px;
-}
-
-.pagination-centered {
-  text-align: center;
-}
-
-.pagination-right {
-  text-align: right;
-}
-
-.pagination-large ul > li > a,
-.pagination-large ul > li > span {
-  padding: 11px 19px;
-  font-size: 17.5px;
-}
-
-.pagination-large ul > li:first-child > a,
-.pagination-large ul > li:first-child > span {
-  -webkit-border-bottom-left-radius: 6px;
-          border-bottom-left-radius: 6px;
-  -webkit-border-top-left-radius: 6px;
-          border-top-left-radius: 6px;
-  -moz-border-radius-bottomleft: 6px;
-  -moz-border-radius-topleft: 6px;
-}
-
-.pagination-large ul > li:last-child > a,
-.pagination-large ul > li:last-child > span {
-  -webkit-border-top-right-radius: 6px;
-          border-top-right-radius: 6px;
-  -webkit-border-bottom-right-radius: 6px;
-          border-bottom-right-radius: 6px;
-  -moz-border-radius-topright: 6px;
-  -moz-border-radius-bottomright: 6px;
-}
-
-.pagination-mini ul > li:first-child > a,
-.pagination-small ul > li:first-child > a,
-.pagination-mini ul > li:first-child > span,
-.pagination-small ul > li:first-child > span {
-  -webkit-border-bottom-left-radius: 3px;
-          border-bottom-left-radius: 3px;
-  -webkit-border-top-left-radius: 3px;
-          border-top-left-radius: 3px;
-  -moz-border-radius-bottomleft: 3px;
-  -moz-border-radius-topleft: 3px;
-}
-
-.pagination-mini ul > li:last-child > a,
-.pagination-small ul > li:last-child > a,
-.pagination-mini ul > li:last-child > span,
-.pagination-small ul > li:last-child > span {
-  -webkit-border-top-right-radius: 3px;
-          border-top-right-radius: 3px;
-  -webkit-border-bottom-right-radius: 3px;
-          border-bottom-right-radius: 3px;
-  -moz-border-radius-topright: 3px;
-  -moz-border-radius-bottomright: 3px;
-}
-
-.pagination-small ul > li > a,
-.pagination-small ul > li > span {
-  padding: 2px 10px;
-  font-size: 11.9px;
-}
-
-.pagination-mini ul > li > a,
-.pagination-mini ul > li > span {
-  padding: 0 6px;
-  font-size: 10.5px;
-}
-
-/* List Formatting */
-ol {
-	li {
-		margin-top: 16px;
-		margin-bottom: 20px;
-	}
-	ul {
-		margin-top: 10px;
-		margin-bottom: 10px;
-		li {
-			margin-top: 0px;
-			margin-bottom: 0px;
-		}
-	}
-}
-
-ul {
-	
-}
-
+// Controller Specific Styles
+@import '../imports/controllers/staffbulletins.scss';
