--- a/app/webroot/assets/imports/resources/primary.scss
+++ b/app/webroot/assets/imports/resources/primary.scss
@@ -96,6 +96,8 @@ footer {
 	margin-right: auto;
 	margin-bottom: 16px;
 	padding: 0;
+	padding-top: 8px;
+	padding-bottom: 8px;
 	border: 0px solid $border-color;
 	background: #fff;
 	z-index: 1;
