--- a/app/webroot/assets/sass/screen.scss
+++ b/app/webroot/assets/sass/screen.scss
@@ -11,6 +11,9 @@
 @import '../imports/resources/font-awesome.scss';
 @import url('https://fonts.googleapis.com/css?family=Handlee|Open+Sans:300,400,700|Roboto+Slab');
 
+/*!
+ * Staff Intranet Styles
+ */
 // Mixins and Variables
 @import '../imports/resources/mixins.scss';
 @import '../imports/resources/settings.scss';
