--- a/app/webroot/assets/imports/resources/typography.scss
+++ b/app/webroot/assets/imports/resources/typography.scss
@@ -12,7 +12,15 @@ h1 {
 	margin-bottom: 10px;
 }
 h2 {
-	margin-bottom: 20px;
+	margin: 0;
+	padding: 0;
+	margin-top: 0.2em;
+	margin-bottom: 0.2em;
+	font-size: 2.25em;
+	font-weight: 400;
+	border-bottom: 1px #dfdfdf solid;
+	margin-bottom: 12px;
+	line-height: 1em;
 }
 h3 {
 	margin: 0;
