--- a/app/webroot/assets/imports/resources/primary.scss
+++ b/app/webroot/assets/imports/resources/primary.scss
@@ -69,6 +69,7 @@ footer {
 	}
 	h2 {
 		text-shadow: 0 0 4px #000;
+		border-bottom: 0;
 		margin: 0;
 		padding: 0;
 		margin-bottom: 16px;
@@ -98,7 +99,6 @@ footer {
 	padding: 0;
 	padding-top: 8px;
 	padding-bottom: 8px;
-	border: 0px solid $border-color;
 	background: #fff;
 	z-index: 1;
 }
