--- a/app/webroot/assets/imports/resources/primary.scss
+++ b/app/webroot/assets/imports/resources/primary.scss
@@ -87,6 +87,7 @@ footer {
 	}
 }
 
+
 /* Primary Classes */
 .main-container {
 	@include box-shadow(0 0 2px 1px #888); 
@@ -101,6 +102,12 @@ footer {
 	padding-bottom: 8px;
 	background: #fff;
 	z-index: 1;
+}
+
+.header {
+	h2 {
+		border-bottom: 0;
+	}
 }
 
 /*
