--- a/app/webroot/assets/sass/print.scss
+++ b/app/webroot/assets/sass/print.scss
@@ -3,7 +3,7 @@
  * <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
-@import '../imports/resources/bootstrap.scss';
+@import 'resources/_bootstrap.scss';
 
 @media screen {
 	.incident {
