--- a/app/webroot/assets/sass/print.scss
+++ b/app/webroot/assets/sass/print.scss
@@ -5,13 +5,40 @@
 @import "compass/reset";
 @import 'resources/_bootstrap.scss';
 
+a.title {
+	color: #000;
+}
+a.title:hover {
+	text-decoration: none;
+}
+
 @media screen {
+	body {
+		background-color: #444;
+		margin-top: 40px;
+	}
+	.print-container {
+		width: 820px;
+		margin-left: auto;
+		margin-right: auto;
+	}
 	.incident {
-		margin-bottom: 700px;
+		padding: 20px;
+		background-color: #fff;
+		margin-top: 20px;
+		margin-bottom: 20px;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 780px;
+		min-height: 1100px;
 	}
 }
 
 @media print {
+	body, p {
+		font-size: 12pt; 
+	}
+
 	.header-container {
 		width: 940px;
 	}
@@ -22,5 +49,8 @@
 
 	.incident {
 		page-break-after: always;
+	}
+	.navbar {
+		visibility: hidden;
 	}
 }
