--- a/app/webroot/assets/sass/resources/_navigation.scss
+++ b/app/webroot/assets/sass/resources/_navigation.scss
@@ -46,7 +46,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 8px;
-	background-color: #0059ac;
+	background-color: #333;
 	z-index: 10000;
 }
 
@@ -58,7 +58,7 @@
 	margin: 0;
 	position: absolute;
 	z-index: -1000;
-	background-color: #00478a;
+	background-color: #121212;
 	top: 80px;
 }
 
