--- a/app/webroot/assets/sass/screen.scss
+++ b/app/webroot/assets/sass/screen.scss
@@ -9,7 +9,7 @@
 @import "sassy-buttons";
 @import 'resources/_bootstrap.scss';
 @import 'resources/_font-awesome.scss';
-@import url('https://fonts.googleapis.com/css?family=Handlee|Open+Sans:300,400,700|Roboto+Slab');
+@import url('https://fonts.googleapis.com/css?family=Handlee|Open+Sans:300,400,700|Roboto+Slab|Droid+Serif');
 
 /*!
  * Staff Intranet Styles
