--- a/app/webroot/assets/sass/print.scss
+++ b/app/webroot/assets/sass/print.scss
@@ -12,6 +12,10 @@ a.title:hover {
 	text-decoration: none;
 }
 
+.header-container {
+	margin-bottom: 20px;
+}
+
 @media screen {
 	body {
 		background-color: #444;
