--- a/app/webroot/assets/sass/resources/_components.scss
+++ b/app/webroot/assets/sass/resources/_components.scss
@@ -23,19 +23,22 @@ table.sbCarousel-table {
   font-size: 60px;
   font-weight: 100;
   line-height: 30px;
-  color: #ffffff;
+  color: #000;
   text-align: center;
-  background: #222222;
-  border: 3px solid #ffffff;
-  -webkit-border-radius: 23px;
-     -moz-border-radius: 23px;
-          border-radius: 23px;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
+  background: none;
+  border: none;
+  -webkit-border-radius: 0px;
+     -moz-border-radius: 0px;
+          border-radius: 0px;
+  opacity: 1;
+  filter: alpha(opacity=100);
 }
 
 a.carousel-control {
-  color: #fff;
+  color: #333;
+}
+a:hover.carousel-control {
+  color: #555;
 }
 
 /* Buttons */
@@ -70,7 +73,7 @@ a:hover.button-primary {
 	filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF333333', endColorstr='#FF333333');
 }
 a.button-nav, a:hover.button-nav, a.button-secondary-nav, a:hover.button-secondary-nav {
-	font-weight: 700;
+	font-weight: 300;
 	color: #fff;
 }
 
