--- a/app/webroot/assets/sass/resources/_primary.scss
+++ b/app/webroot/assets/sass/resources/_primary.scss
@@ -105,7 +105,41 @@ footer {
 }
 
 .header {
+	background-color: #fff;
+	background-repeat: repeat-x;
+	height: 72px;
+	width: 100%;
+	padding-top: 8px;
+	.container {
+		margin-top: 0;
+		margin-bottom: 0;
+		padding: 0;
+	}
+	a {
+		h1 {
+			color: #333;
+		}
+		h2 {
+			color: #6e6e6e;
+		}
+	}
+	h1 {
+		margin: 0;
+		padding: 0;
+		font-size: 32px;
+		line-height: 1em;
+		font-weight: 400;
+	}
 	h2 {
+		margin: 0;
+		padding: 0;
+		position: relative;
+		left: 20px;
+		line-height: 1em;
+		font-family: $primary-font, serif;
+		font-weight: 400;
+		font-size: 24px;
+		color: #6e6e6e;
 		border-bottom: 0;
 	}
 }
