--- a/app/webroot/sass/screen.scss
+++ b/app/webroot/sass/screen.scss
@@ -8,6 +8,7 @@
 @import "compass/css3";
 @import "sassy-buttons";
 @import 'resources/_bootstrap.scss';
+//@import 'resources/_bootstrap-theme.scss';
 @import 'resources/_font-awesome.scss';
 @import url('https://fonts.googleapis.com/css?family=Handlee|Open+Sans:300,400,700|Roboto+Slab|Droid+Serif');
 
