Incidents now only show incidents for students which exist

--- a/app/webroot/sass/resources/_primary.scss
+++ b/app/webroot/sass/resources/_primary.scss
@@ -10,7 +10,7 @@ body {
 
 footer {
 	@include center;
-	background-color: #121212;
+	background-color: #1d1d1d;
 	font-size: 0.8em;
 	line-height: 1em;
 	width: 100%; 
