--- a/app/webroot/sass/screen.scss
+++ b/app/webroot/sass/screen.scss
@@ -28,3 +28,6 @@
 // Controller Specific Styles
 @import 'controllers/_staffbulletins.scss';
 @import 'controllers/_staff.scss';
+
+// CMS related Styles
+@import 'resources/_cms.scss';
