--- a/app/webroot/sass/print.scss
+++ b/app/webroot/sass/print.scss
@@ -1,7 +1,3 @@
-/* Welcome to Compass. Use this file to define print styles.
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /> */
-
 @import "compass/reset";
 @import 'resources/_bootstrap.scss';
 
@@ -39,6 +35,10 @@ a.title:hover {
 }
 
 @media print {
+	body {
+		padding: 0;
+		padding-top: 0;
+	}
 	body, p {
 		font-size: 12pt; 
 	}
@@ -54,7 +54,45 @@ a.title:hover {
 	.incident {
 		page-break-after: always;
 	}
-	.navbar {
+
+	.main-container {
+		padding: 0;
+		margin: 0;
+	}
+
+	.page-title {
+		h1 {
+			line-height: 1em;
+			padding: 0;
+			margin: 0;
+		}
+	}
+
+	.screen, .cms-tools, .header, footer, nav, .nav, .navbar, .navbar-default, .navbar-static-top {
+		h1, h2, h3, h4, h5, h6 {
+			margin: 0;
+			padding: 0;
+			line-height: 0;
+		}
+		line-height: 0;
 		visibility: hidden;
+		min-height: 0px;
+		margin: 0;
+		height: 0px;
+		width: 0px;
+		overflow: hidden;
+		font-size: 0px;
+	}
+	table, .table-condensed {
+		font-size: 9pt;
+		tr {
+			padding: 0;
+			td {
+				padding: 0;
+			}
+		}
+	}
+	.table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
+		padding: 2px;
 	}
 }
