--- a/app/webroot/sass/resources/_bootstrap.scss
+++ b/app/webroot/sass/resources/_bootstrap.scss
@@ -1091,7 +1091,7 @@ pre code {
 .col-xs-offset-1 {
   margin-left: 8.333333333333332%;
 }
-
+/*
 @media (min-width: 768px) {
   .container {
     width: 750px;
@@ -1417,8 +1417,8 @@ pre code {
     margin-left: 8.333333333333332%;
   }
 }
-
-@media (min-width: 1200px) {
+*/
+@media (min-width: 120px) {
   .container {
     width: 1170px;
   }
@@ -6606,7 +6606,7 @@ th.visible-xs,
 td.visible-xs {
   display: none !important;
 }
-
+/*
 @media (max-width: 767px) {
   .visible-xs {
     display: block !important;
@@ -7031,7 +7031,7 @@ td.hidden-lg {
     display: none !important;
   }
 }
-
+*/
 .visible-print,
 tr.visible-print,
 th.visible-print,
