Incident and printing improvements

--- a/app/webroot/sass/print.scss
+++ b/app/webroot/sass/print.scss
@@ -68,7 +68,7 @@ a.title:hover {
 		}
 	}
 
-	.screen, .cms-tools, .header, footer, nav, .nav, .navbar, .navbar-default, .navbar-static-top {
+	.actions, .screen, .cms-tools, .header, footer, nav, .nav, .navbar, .navbar-default, .navbar-static-top {
 		h1, h2, h3, h4, h5, h6 {
 			margin: 0;
 			padding: 0;
